Included ticks on Fig2

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -74,15 +74,15 @@ corresponding author: [j.palacio\@oceans.ubc.ca](mailto:j.palacios@oceans.ubc.ca
 
 **Main Text.**
 
-Over the past century, human activities have dramatically altered the physical and biogeochemical conditions of the ocean, resulting in warmer, more acidic and less oxygenated waters [@IPCC:2019tn]. Marine species’ distributions reflect species’ preferences for discrete environmental conditions [@Hutchinson:1957nt]. As a result of changing ocean conditions, many marine species **are shifting** their distributions towards higher latitudes, deeper water or following local temperature gradients to remain within their optimal environmental “niche” [@Poloczanska:2016kk]. The biogeography of marine species is projected to continue to shift as ocean conditions change through the 21st century [@Cheung:2010dt], impacting fish stocks, fisheries production and economies [@Sumaila:2019ew]. These impacts are compromising our capacity to reach international sustainability goals under the United Nations (UN)  2030 Agenda for Sustainable Development such as Goal 14 - life below water [@UnitedNations2018; @Singh:2017ds; @Pecl:2017hu]. The projected risks of impacts can be reduced by improving the effectiveness of current fisheries management, including for species that cross international borders, also known as ‘shared stocks’ [@Pinsky:2018cb].
+Over the past century, human activities have dramatically altered the physical and biogeochemical conditions of the ocean, resulting in warmer, more acidic and less oxygenated waters [@IPCC:2019tn]. Marine species’ distributions reflect species’ preferences for discrete environmental conditions [@Hutchinson:1957nt]. As a result of changing ocean conditions, many marine species **are shifting** their distributions towards higher latitudes, deeper water or following local temperature gradients to remain within their optimal environmental “niche” [@Poloczanska:2016kk]. The biogeography of marine species is projected to continue to shift as ocean conditions change through the 21st century [@Cheung:2010dt], impacting fish stocks, fisheries production and economies [@Sumaila:2019ew]. These impacts are compromising our capacity to reach international sustainability goals under the United Nations (UN)  2030 Agenda for Sustainable Development such as Goal 14 - life below water [@UnitedNations2018; @Singh:2017ds; @Pecl:2017hu]. The projected risks and impacts can be reduced by improving the effectiveness of current governance and fisheries management, including for species that cross international borders, also known as ‘shared stocks’ [@Pinsky:2018cb].
 
-The concept of shared stocks was developed following the ratification of the United Nations Convention on the Law of the Sea (UNCLOS) and the claiming of Exclusive Economic Zones (EEZs) by Coastal States [@UnitedNations:1986tl]. As defined by the UN's Food and Agriculture Organization, shared stocks can be classified into four non-exclusive categories: (*i*) transboundary stocks, which cross neighboring EEZs; (*ii*) straddling stocks that, in addition to neighboring EEZs, also visit the adjacent high seas; (*iii*) highly migratory stocks, mainly tunas and bill-fishes, that migrate across vast oceanic regions including both the high seas and EEZs; and (*iv*) discrete stocks that are only present in the high seas [@Munro:2004th]. This study focuses on transboundary stocks exploited by fisheries operating within EEZs. Under UNCLOS, countries are responsible for the management of stocks within their EEZs and encouraged to cooperate when stocks are shared  [@UnitedNations:1986tl]. A recent study estimates that there are 633 transboundary fish species globally, representing 67% of identified exploited taxa. Between 2005 and 2010, these species yielded an annual average of 48 million tonnes of catch and USD 78 billion in fishing revenue [@PalaciosAbrantes:2020tv].
+The concept of shared stocks was developed following the ratification of the UN on the Law of the Sea (UNCLOS) and the claiming of Exclusive Economic Zones (EEZs) by Coastal States [@UnitedNations:1986tl]. As defined by the UN's Food and Agriculture Organization, shared stocks can be classified into four non-exclusive categories: (*i*) transboundary stocks, which cross neighboring EEZs; (*ii*) straddling stocks that, in addition to neighboring EEZs, also visit the adjacent high seas; (*iii*) highly migratory stocks, mainly tunas and bill-fishes, that migrate across vast oceanic regions including both the high seas and EEZs; and (*iv*) discrete stocks that are only present on the high seas [@Munro:2004th]. This study focuses on transboundary stocks exploited by fisheries operating within EEZs. Under UNCLOS, countries are responsible for the management of stocks within their EEZs and encouraged to cooperate when stocks are shared  [@UnitedNations:1986tl]. A recent study estimates that there are 633 transboundary fish species globally, representing 67% of identified exploited taxa. Between 2005 and 2010, these species yielded an annual average of 48 million tonnes of catch and USD 78 billion in fishing revenue [@PalaciosAbrantes:2020tv].
 
-Most fisheries management is poorly adapted to address species’ shifting distributions as a result of changing ocean conditions. The effectiveness of fisheries management for transboundary species is challenged by shifts in stocks’ distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of a changing climate on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal spatial variation (e.g., migration, reproductive cycle), misalignment between fisheries resources allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Spijkers:2017ij; @Crespo:2020cs]. For example, Pacific salmon (*Oncorhynchus sp.*) jointly managed by Canada and the U.S. was heavily fished in the early 1990s after a stock shift favored the Alaskan fleet over the Canadian fleet [@Miller:2013iv]. Such patterns are expected to be exacerbated under increasing climate change [@Pinsky:2018cb; @Sumaila:2011bq]. The importance of transboundary stocks for both catch and fisheries revenue [@PalaciosAbrantes:2020tv] highlights their critical role in achieving the Sustainable Development Goals (SDG) under the UN 2030 Agenda. Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the goals set out under the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
+Most fisheries management is poorly adapted to address species’ shifting distributions because of changing ocean conditions. The effectiveness of fisheries management for transboundary species is challenged by shifts in stocks’ distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of a changing climate on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal variation in their distribution (e.g., migration, reproductive cycle), misalignment between fisheries resources' allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Spijkers:2017ij; @Crespo:2020cs]. For example, Pacific salmon species (*Oncorhynchus sp.*), jointly managed by Canada and the U.S., were heavily fished in the early 1990s after a stock shift favored the Alaskan fleet over the Canadian fleet [@Miller:2013iv]. Continuing climate change is expected to exacerbate such patterns [@Pinsky:2018cb; @Sumaila:2011bq]. Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the goals set out under the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
 
 Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth system model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries/political entities under a high greenhouse gas emissions scenario (see Methods **and Supplemental Materials**). We then estimate the year in which the 633 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variations (Fig. \@ref(fig:toeFigure1N)) and the intensity of this shift (i.e., time of emergence and stock share ratio; see Methods **and Supplemental Materials**). We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a managed population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
 
-```{r toeFigure1N, eval = T,  echo = F, fig.width=14, fig.height=10, fig.cap =  "Schematic diagram of the transboundary index (TI) to determine the time of emergence of transboundary stocks from one Exclusive Economic Zone to another. The index is based on the distance between the distributional centroid of the transboundary stock and the geographic centroid of the neighboring Exclusive Economic Zones sharing the stock (Top panel). Time of emergence is defined as the first year when the TI overshoots historical values (Bottom panel). Only showing a subset of ensemble members for clarification."}
+```{r toeFigure1N, eval = T,  echo = F, fig.width=14, fig.height=10, fig.cap =  "Schematic diagram of the transboundary index (TI) to determine the time of emergence of transboundary stocks from one Exclusive Economic Zone (EEZ) to another. The index is based on the distance between the distributional centroid of the transboundary stock and the geographic centroid of the neighboring EEZ sharing the stock (Top panel). Time of emergence is defined as the first year when the TI overshoots historical values (Bottom panel). Only showing a subset of ensemble members for clarity."}
 
 img <- readPNG("../Figures/Fig1.png")
 grid.raster(img)
@@ -93,7 +93,7 @@ grid.raster(img)
 
 **Identifying range shifts in the shared distribution of transboundary stocks**
 
-**Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability by 2100 (hereafter referred to as ‘shifts’; Fig. \@ref(fig:toeFigure1)A), with the first shift having occurred back in 2006.** This corresponds to 45% of the studied stocks (Fig. \@ref(fig:toeFigure1)C). The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be 2036 (s.d. of all species, $\pm$ 28 years). Furthermore, 81% of the world’s EEZs will experience at least one transboundary stock shift between 2006 and 2100 with 78% recording a distributional shift in stocks by the UN 2030 Agenda’s deadline (i.e., year 2030) (Fig. \@ref(fig:toeFigure1)C).
+**Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability by 2100 (hereafter referred to as ‘shifts’; Fig. \@ref(fig:toeFigure1)A), with the first shift modelled to have occurred back in 2006.** This corresponds to 45% of the studied stocks (Fig. \@ref(fig:toeFigure1)C). The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be 2036 (s.d. of all species, $\pm$ 28 years). Furthermore, 81% of the world’s EEZs will experience at least one transboundary stock shift between 2006 and 2100 with 78% recording a distributional shift in stocks by the UN 2030 Agenda’s deadline (Fig. \@ref(fig:toeFigure1)C).
 
 ```{r toeFigure1, eval = T,  echo = F, fig.width = 9, fig.height=4, fig.pos= "H", fig.cap =  "**Timeline of shifts in transboundary shared stock distribution.** (A) Number of stocks (cumulative) with their distribution centroids that have shifted beyond natural variations, (B) Number of EEZs (cumulative) with the distribution centroid of at least one stock that have shifted beyond natural variations and (C) proportion of total shifting stocks and EEZs with at least one stock shifting beyond natural variability. Dashed lines represent the year by which countries have committed to reach full implementation of the 2030 Agenda, as well as mid and late change in range shift (see Methods), respectively."}
 
