Addressed Colettes eddits up to results

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -95,7 +95,7 @@ grid.raster(img)
 
 **Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability by 2100 (hereafter referred to as ‘shifts’; Fig. \@ref(fig:toeFigure1)A), with the first shift modelled to have occurred back in 2006.** This corresponds to 45% of the studied stocks (Fig. \@ref(fig:toeFigure1)C). The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be 2036 (s.d. of all species, $\pm$ 28 years). Furthermore, 81% of the world’s EEZs will experience at least one transboundary stock shift between 2006 and 2100 with 78% recording a distributional shift in stocks by the UN 2030 Agenda’s deadline (Fig. \@ref(fig:toeFigure1)C).
 
-```{r toeFigure1, eval = T,  echo = F, fig.width = 9, fig.height=4, fig.pos= "H", fig.cap =  "**Timeline of shifts in transboundary shared stock distribution.** (A) Number of stocks (cumulative) with their distribution centroids that have shifted beyond natural variations, (B) Number of EEZs (cumulative) with the distribution centroid of at least one stock that have shifted beyond natural variations and (C) proportion of total shifting stocks and EEZs with at least one stock shifting beyond natural variability. Dashed lines represent the year by which countries have committed to reach full implementation of the 2030 Agenda, as well as mid and late change in range shift (see Methods), respectively."}
+```{r toeFigure1, eval = T,  echo = F, fig.width = 9, fig.height=4, fig.pos= "H", fig.cap =  "**Timeline of shifts in transboundary shared stock distribution.** (A) Number of stocks (cumulative) whose distribution centroids that have shifted beyond natural variations over time (from 2006 to >2100), (B) Number of EEZs (cumulative) with the distribution centroid of at least one stock that have shifted beyond natural variations and (C) proportion of total shifting stocks and EEZs with at least one stock shifting beyond natural variability. Dashed lines represent the year by which countries have committed to reach full implementation of the 2030 Agenda, as well as mid and late change in range shift (see Methods), respectively."}
 
 img <- readPNG("../Figures/Fig2.png")
 grid.raster(img)
@@ -103,12 +103,12 @@ grid.raster(img)
 ```
 
 
-The median year in which transboundary stocks experience a range shift varied significantly according to the species’ habitat association (Methods; Kruskal-Wallis, $X^2$ = 203.85, DF = 93, *p* < 0.001; Tables \@ref(tab:toeTableS1), \@ref(tab:toeTableS2) and Fig. \@ref(fig:toeFigureS1)) and geographic region of the neighboring EEZs (Methods; Kruskal-Wallis, $X^2$ = 242.11, DF = 93, *p* < 0.001; Table S3 and Fig. 2A). Overall, most tropical EEZs and stocks will see earlier shifts, with the EEZs of Latin America, the Caribbean and Polynesia experiencing shifts significantly earlier (*p* < 0.05; Tables \@ref(tab:toeTableS2) and \@ref(tab:toeTableS3) than almost any other region (Figs. \@ref(fig:toeFigure2)B, \@ref(fig:toeFigureS1) and \@ref(fig:toeFigureS2)). In contrast, EEZs and stocks located in temperate regions like northern Europe and eastern Asia are projected to experience much later range shifts. Stocks in the EEZ of countries such as Brazil and New Zealand are projected to experience no range shifts beyond natural variability by the end of this century (Fig. \@ref(fig:toeFigure2)A).
+The median year in which transboundary stocks experience a range shift varied significantly according to the species’ habitat association (Methods; Kruskal-Wallis, $X^2$ = 203.85, DF = 93, *p* < 0.001; Tables \@ref(tab:toeTableS1), \@ref(tab:toeTableS2) and Fig. \@ref(fig:toeFigureS1)) and EEZs' geographic regions (Methods; Kruskal-Wallis, $X^2$ = 242.11, DF = 93, *p* < 0.001; Table S3 and Fig. 2A). Overall, most tropical EEZs and stocks will see earlier shifts, with the EEZs of Latin America, the Caribbean and Polynesia experiencing shifts significantly earlier (*p* < 0.05; Tables \@ref(tab:toeTableS2) and \@ref(tab:toeTableS3) than almost any other region (Figs. \@ref(fig:toeFigure2)B, \@ref(fig:toeFigureS1) and \@ref(fig:toeFigureS2)). In contrast, EEZs and stocks located in temperate regions, like northern Europe and eastern Asia, are projected to experience much later range shifts. Stocks in Brazil and New Zealand's EEZ are projected to experience no range shifts beyond natural variability by the end of this century (Fig. \@ref(fig:toeFigure2)A).
 
-On average, shifting transboundary stocks represented 23% (s.d. $\pm$  22%) of yearly fishing revenue from fisheries targeting **transboundary** stocks within global EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). **From all fisheries targeting transboundary stocks between 2004 and 2010 in the global EEZs, shifting stocks represented on average 23% (s.d. $\pm$  22%) of the yearly revenue (Fig. \@ref(fig:toeFigure2)A).** However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru).
+On average, shifting transboundary stocks represented 23% (s.d. $\pm$  22%) of annual revenue from fisheries targeting **transboundary** stocks across the world's EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). **From all fisheries targeting transboundary stocks between 2004 and 2010 in the global EEZs, shifting stocks represented on average 23% (s.d. $\pm$  22%) of the yearly revenue (Fig. \@ref(fig:toeFigure2)A).** However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru).
 
 
-```{r toeFigure2, eval = T,  echo = F, fig.width  = 13,fig.pos= "H", fig.height =11, fig.cap =  "**Year of change in the shared distribution of 4,119 transboundary stocks.** A) Land polygons show the contribution of shifting stocks to a country or territory’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons display average year of range shifts within them. EEZs with no distributional shift between 2006 and 2100 are represented in aqua color. B) Year of shared distribution shifts by UN sub-regions. Points color coded by the median year of range shift. Horizontal dashed line represent the year by which countries have committed to reach full implementation of the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand."}
+```{r toeFigure2, eval = T,  echo = F, fig.width  = 13,fig.pos= "H", fig.height =11, fig.cap =  "**Year of change in the shared distribution of 4,119 transboundary stocks. A) Land polygons show the contribution of shifting stocks to a country or territory’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons display average year of range shifts within them. Warm colours are indicative of an early shift/high fishing revenue contribution from transboundary stocks while cool colours represent a late shift/low fishing revenue. EEZs with no distributional shift between 2006 and 2100 are represented in pale blue. B) Year of shared distribution shifts by UN sub-regions. Points color coded by the average year of range shift. Horizontal dashed line represents the year by which countries have committed to reach full implementation of the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand."}
 
 img <- readPNG("../Figures/Fig3.png")
 grid.raster(img)
@@ -117,10 +117,10 @@ grid.raster(img)
 
 <!-- ![toeFigure 2. Year of change in the shared distribution of 4,119 transboundary stocks. A) Land polygon shows the contribution of shifting stocks to the country’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons represent average range shifts per EEZ. EEZs with no time of emergence between 2006 and 2100 are represented in aqua color. B) Year of shared distribution shifts by region according to United Nations sub-regions. Points represent the median year of range shift. Horizontal dashed line represents the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand](../Figures/Fig3.png) -->
 
-We estimated the current (i.e., 2005 - 2010) contribution of shifting stocks to yearly fishing revenue generated from fisheries targeting transboundary stocks within global EEZs. Within five years of the UN 2030 Agenda, 979 transboundary stocks responsible for 5.3 billion USD generated in fishing revenue are projected to shift in the EEZs of 76 countries (Fig. \@ref(fig:toeFigure3)); with 4.2 billion USD accounted by 321 stocks shifting in just eleven countries (Fig. \@ref(fig:toeFigure3)).  In terms of the number of transboundary stocks shifting from historical variability, the EEZs of Spain (n = 122), France (n = 85), China and Portugal (both n = 73), and Senegal (n = 66), emerge as the top five (Fig. \@ref(fig:toeFigure3)).
+We estimated the current (i.e., 2005 - 2010) contribution of shifting stocks to yearly fishing revenue generated from fisheries targeting transboundary stocks within global EEZs. Within five years of the UN 2030 Agenda, 979 transboundary stocks responsible for 5.3 billion USD generated in fishing revenue are projected to shift in the EEZs of 76 countries (Fig. \@ref(fig:toeFigure3)); with 4.2 billion USD accounted by 321 stocks shifting in just eleven countries (Fig. \@ref(fig:toeFigure3)). The number of transboundary stocks shifting from historical variability was highest in the EEZs of Spain (n = 122), France (n = 85), China and Portugal (both n = 73), and Senegal (n = 66) (Fig. \@ref(fig:toeFigure3)).
 
 
-```{r toeFigure3, eval = T,  echo = F, fig.width=8, fig.height=6, fig.pos= "H", fig.cap =  "**Average range shift of transboundary stocks and corresponding fishing revenue per country.** Countries are coded according to different colored symbols representative of 5 distinct regions. Horizontal line separates countries above and below the 75th percentile of annual fishing revenue. Showing country names for those within the top 75th percentile projected to have an average shift within 5 years after the 2030 Agenda."}
+```{r toeFigure3, eval = T,  echo = F, fig.width=8, fig.height=6, fig.pos= "H", fig.cap =  "**Average range shift of transboundary stocks and corresponding fishing revenue per country. Countries are coded according to different colored symbols representative of 5 distinct regions. The horizontal line separates countries above and below the 75th percentile of annual fishing revenue. Showing country names for the eleven nations above the 75th percentile and projected to have an average shift across transboundary stocks within its EEZ within 5 years of the 2030 Agenda deadline."}
 
 img <- readPNG("../Figures/Fig4.png")
 grid.raster(img)
@@ -131,9 +131,9 @@ grid.raster(img)
 
 <!-- We based the transboundary index on a stock’s centroid defined as the average grid cells that contain the majority of a stock’s abundance (see Methods - Calculating an index of transboundary range shift). Results from the sensitivity analysis suggest that our method is robust to the abundance level (e.g., the top 95%) of the stock (Fig. \@ref(fig:toeFigureS3)). In addition, we set an arbitrary threshold of 2 s.d. (95% confidence) to determine the time of emergence of the transboundary index. Sensitivity tests to a lower threshold of 1 s.d. (for a 68% confidence) resulted in a global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27, a difference of about 7 years (Fig. \@ref(fig:toeFigureS4)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks. SENT TO METHODS!!!! -->
 
-We estimated the intensity of the distributional shift of transboundary stocks in terms of changes in catch proportion by 2030 (2020-2040) and 2050 (2040-2060), relative to the recent past (1951-2005) (see Methods). **Findings show that by 2030, 59% $\pm$ 17% of the yearly catch from transboundary stocks is projected to change beyond an EEZ’s historic proportion (i.e., between 2004 and 2010;** Fig. \@ref(fig:toeFigure4)A). Moreover,  85% (n = 239) of the world EEZs would have experienced changes in catch proportion of transboundary stocks by 2030. **There will be an increase in the number of stocks changing their catch proportion and the number of EEZs with changing stocks towards the mid-21st century. Such increase will be followed by an increase in the intensity of the proportion that changes (Figs. \@ref(fig:toeFigureS3) and \@ref(fig:toeFigureS4)).**
+We estimated the intensity of the distributional shift of transboundary stocks in terms of changes in catch proportion by 2030 (2020-2040) and 2050 (2040-2060), relative to the recent past (1951-2005) (see Methods). **Findings show that by 2030, 59% $\pm$ 17% of the yearly catch from transboundary stocks is projected to change beyond an EEZ’s historic proportion (i.e., between 2004 and 2010;** Fig. \@ref(fig:toeFigure4)A). Moreover, 85% (n = 239) of the world's EEZs will have experienced changes in catch proportion of transboundary stocks by 2030. **There will be an increase in the number of stocks changing their catch proportion and the number of EEZs with changing stocks towards the mid-21st century. Such increase will be followed by an increase in the intensity of the proportion that changes (Figs. \@ref(fig:toeFigureS3) and \@ref(fig:toeFigureS4)).**
 
-```{r toeFigure4, eval = T,  echo = F, fig.width=12, fig.height=10,fig.pos= "H", fig.cap =  "**Changes in stock proportion of neighboring Exclusive Economic Zones by 2030 (2021-2040) relative to 1951-2005.** Lines represent the average change in transboundary stock share ratio with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio (i.e., over two standard deviations from the historical catch proportion) beyond the identified threat point with higher gains identified in warmer colors. Panel B highlights changes for the Caribbean and Northwestern Europe."}
+```{r toeFigure4, eval = T,  echo = F, fig.width=12, fig.height=10,fig.pos= "H", fig.cap =  "**Changes in stock proportion of neighboring Exclusive Economic Zones by 2030 (2021-2040) relative to 1951-2005.** Lines represent the average change in transboundary stock share ratio (Methods) with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio (i.e., over two standard deviations from the historical catch proportion) beyond the identified threat point with higher gains identified in warmer colors. Panel B highlights changes for the Caribbean and Northwestern Europe."}
 
 img <- readPNG("../Figures/Fig5.png")
 grid.raster(img)
@@ -142,7 +142,7 @@ grid.raster(img)
 
 <!-- ![Figure 1. Changes in stock share ratio below each country’s threat point by 2030 (2021-2040) relative to 1951-2005. Lines represent the average change in transboundary stock share ratio with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio beyond the identified threat point with higher gains identified in warmer colors (green to yellow). Panel B zooms into specific areas shown within the gray dashed line boundaries in A.](../Figures/Fig1.png) -->
 
-The direction and intensity of shifts in transboundary stocks are largely related to regional changes in biogeography and the shape of the EEZs (Fig. \@ref(fig:toeFigure4)A). In cases, like the Atlantic and Pacific coasts of Northern and Southern America and the Atlantic coast of Southern Africa, the proportion of the stock is expected to follow a projected poleward shift. However, shifts in the coasts of Pacific Central America and West Africa occur along an equatorial direction. Here, transboundary species follow specific oceanographic regions (*sensu* Longhurst) like upwelling zones (e.g., Humboldt current) and local patterns of oxygen availability, in addition to temperature gradients. Regions where EEZs are relatively small and have multiple borders (e.g., Caribbean or Northwestern Europe) are expected to have a particularly complex exchange of stock share ratio with no clear established pattern (Fig. \@ref(fig:toeFigure4)B).
+The direction and intensity of shifts in transboundary stocks are largely related to regional changes in biogeography and the shape of EEZs (Fig. \@ref(fig:toeFigure4)A). Along the Atlantic and Pacific coasts of Northern and Southern America and the Atlantic coast of Southern Africa, the proportion of the stock is expected to follow a projected poleward shift. However, shifts in the coasts of Pacific Central America and West Africa occur along an equatorial direction. Here, transboundary species follow specific oceanographic regions (*sensu* Longhurst) like upwelling zones (e.g., Humboldt current) and local patterns of oxygen availability, in addition to temperature gradients. Regions where EEZs are relatively small and have multiple borders (e.g., Caribbean or Northwestern Europe) are expected to have a particularly complex exchange of stock share ratio with no clear established pattern (Fig. \@ref(fig:toeFigure4)B).
 
 <!-- ## Discussion -->
 
