I cluded William's comments

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -156,7 +156,7 @@ Our findings highlighting early shifts in the shared distribution of transbounda
 
 Our results identify regional “hotspots” of climate risk for transboundary fisheries management that will require the prompt adaptation of management plans (Figures \@ref(fig:toeFigure2)A and \@ref(fig:toeFigure4)A). Regions such as the Caribbean are characterized by high levels of warming relative to historical natural variability [@IPCC:2019tn; @Hawkins:2012hc] and species’ high vulnerability to warming waters [@IPCC:2019tn]. Moreover, they represent relatively low area EEZs that border multiple countries. Game theory predicts that the greater the number of negotiating parties, the harder it is for parties to reach an agreement [@Gronbaek:2020ei]. Thus, coordinating the management of shifting transboundary stocks for countries in these regions will be particularly challenging. 
 
-**Most management plans that are not designed or prepared to respond to range and abundance shifts will be less resilient to climate change [@Miller:2013iv; @Sumaila:2020tp]. Focusing on identified “hotspots” is key to anticipating a potential increase in and averting fisheries conflicts in coming years. Identified strategies to cope with changes in the shared proportion of transboundary stocks include strengthening of current cooperative mechanisms and the consideration of side payments, which do not have to be monetary [@Tunca:2019if; @Miller:2013iv], increased international cooperation [@Miller:2013iv] and management rules that capture distributional shifts [@PalaciosAbrantes:2020vt; @Pinsky:2018cb]. Some examples of current treaties that have adapted some of these strategies include: the Pacific Salmon Treaty between Canada and the U.S. to manage Pacific salmon (Oncorhynchus sp.) and which has a conservation fund functioning as a side payment [@Miller:2013iv], the International Pacific Halibut Commission between Canada and the United States, which as the name implies manages Pacific halibut (*Hippoglossus stenolepis*) and allocates quota based on the stock’s yearly distribution [@PalaciosAbrantes:2020vt]; and the Parties to the Nauru Agreement (PNA) an Oceania subregional agreement among 8 Pacific Island countries and Tokelau, which collectively manage the largest tuna fishery in the world, controlling around 50% of the global supply of skipjack tuna (*Katsuwonus pelamis*). The PNA manage fishing effort under a so-called Vessel Day Scheme, an adaptive and equitable system which accounts for shifts in stocks and catches as a result of climate variability [@Aqorau:2018bh]. Quota allocation methods based on a stock’s current distribution and/or according to fixed-historical proportions like that of the European Union need to evolve to be more agile [@Baudron:2020dj] and potentially move towards a dynamic method or a combination of both [@PalaciosAbrantes:2020vt; @Sumaila:2020tp].**
+**Most management plans that are not designed or prepared to respond to range and abundance shifts will be less resilient to climate change [@Miller:2013iv; @Sumaila:2020tp]. Focusing on identified “hotspots” will help anticipate any potential increases in and averting fisheries conflicts in coming years. Identified strategies to cope with changes in the shared proportion of transboundary stocks include strengthening of current cooperative mechanisms and the consideration of side payments (including non-monetary arrangements) [@Tunca:2019if; @Miller:2013iv], increased international cooperation [@Miller:2013iv] and management rules that capture distributional shifts [@PalaciosAbrantes:2020vt; @Pinsky:2018cb]. Some examples of current treaties that have adapted some of these strategies include: the Pacific Salmon Treaty between Canada and the U.S. to manage Pacific salmon (Oncorhynchus sp.) and which has a conservation fund functioning as a side payment [@Miller:2013iv], the International Pacific Halibut Commission between Canada and the United States, which as the name implies manages Pacific halibut (*Hippoglossus stenolepis*) and allocates quota based on the stock’s yearly distribution [@PalaciosAbrantes:2020vt]; and the Parties to the Nauru Agreement (PNA) an Oceania subregional agreement among 8 Pacific Island countries and Tokelau, which collectively manage the largest tuna fishery in the world, controlling around 50% of the global supply of skipjack tuna (*Katsuwonus pelamis*). The PNA manage fishing effort under a so-called Vessel Day Scheme, an adaptive and equitable system which accounts for shifts in stocks and catches as a result of climate variability [@Aqorau:2018bh]. Quota allocation methods based on a stock’s current distribution and/or according to fixed-historical proportions like that of the European Union need to evolve to be more agile [@Baudron:2020dj] and potentially move towards a dynamic method or a combination of both [@PalaciosAbrantes:2020vt; @Sumaila:2020tp].**
 
 **Even management plans that take into consideration such strategies might not be fully prepared for the consequences of shifting transboundary stocks [@Pinsky:2018cb; @Koubrak:2020hw; @Engler:2020bg]. For example, species’ shifts within the PNA area will likely also have to deal with stocks expanding to new jurisdictions, issue that the NEAFC is currently facing regarding Atlantic mackerel [@Spijkers:2017ij; @Pinsky:2018cb]. Moreover, the transition from historic to dynamic allocations can find strong resistance from stakeholders “losing” benefits from a fishery they have historically been entitled to. Finally, changes in policy can take years (e.g., it took the PST about 10 years to agree on a conservation fund) and sometimes, the time of political change is longer than that of species shifts [@Pinsky:2012kq]. This is specifically true we could be missing shifting stocks as we lack standardized data to track shifts across international jurisdictions [@Maureaud:2021gj]. Moreover, recent efforts looking at international fisheries plans found that all 127 plans lacked direct actions to address topics of climate change or species range shifts across jurisdictions. Furthermore, authors were rarely able to identify the stock in question, and when they did, it was as broad as skipjack tuna or billfishes [@Oremus:2020id]. Having a better understanding of what stocks are managed as transboundary and under what rules would be an important complement to our study and an important step towards the sustainability of international stocks.**
 
